load("@rules_cc//cc:defs.bzl", "cc_library")

# we export these srcs so //src/include/obazl:mkhdrs can generate the export interface obazl.h
exports_files(glob(["*.c"]))

##########
cc_library(
    name  = "starlark",
    # alwayslink = True,
    linkstatic = 1,
    srcs  = [
        "starlark.c",
        "starlark.h",
        "serialize.c",
        "serialize.h",
    ],
    hdrs = [
        "@uthash//:include",
        "//vendored/logc:log.h"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",
        "-g", "-O0",
        "-I", ".",
        "-I", "$(GENDIR)/src",
        "-I", "$(GENDIR)/external/obazl/src",
        "-I", "$(GENDIR)/external/tools_obazl/src",

        "-I", "external/uthash/include",
        "-I", "vendored/logc",
        "-I", "external/obazl/vendored/logc",
        "-I", "external/tools_obazl/vendored/logc"
    ],
    deps = [
        ":lexer",
        ":parser",
        "//vendored/logc"
    ],
    visibility = ["//visibility:public"]
)

##########
cc_library(
    name  = "parser",
    visibility = ["//visibility:public"],
    srcs  = [
        "parser.c",
        "parser.h",
        "nodes.c",
        "nodes.h",
        "@uthash//:include"
    ],
    copts = [
        "-std=c11",
        # "-g",
        "-I", "$(GENDIR)/src",
        "-I", "external/uthash/include",
        "-I", "vendored/logc",
        "-I", "external/obazl/vendored/logc",
        "-I", "external/tools_obazl/vendored/logc",
        "-U", "NDEBUG"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc"
    ]
)

########
genrule(
    name = "gen_parser",
    srcs = [
        "parser.y",
        "//vendored/lemon:lempar.c"
    ],
    tools = ["//vendored/lemon"],
    outs  = [
        "parser.c",
        "parser.out"
    ],
    cmd   = "\n".join([
        "$(location //vendored/lemon) -m \\",
        "$(location parser.y) \\",
        "-T$(location //vendored/lemon:lempar.c) \\",
        "-DTEST \\",
        "-d$(RULEDIR)",
    ]),
    visibility = ["//visibility:public"]
)

###########
cc_library(
    name  = "lexer",
    visibility = ["//visibility:public"],
    srcs  = [
        "lexer.c",
        "lexer.h",
        "nodes.c",
        "nodes.h",
        "token_debug.c",
        "token_debug.h",
        "@uthash//:include",
    ],
    copts = [
        "-std=c11",
        "-I", ".",
        "-I", "src",
        "-I", "$(GENDIR)/src",

        "-I", "external/uthash/include",
        "-I", "vendored/logc",
        "-I", "external/obazl/vendored/logc",
        "-I", "external/tools_obazl/vendored/logc",
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc"
    ]
)

########
genrule(
    name = "gen_lexer",
    srcs = [
        "lexer.re",
        # "test.re",
    ],
    tools = ["//external/re2c"],
    outs  = [
        "lexer.c"
    ],
    cmd   = "\n".join([
        "for f in $(locations //external/re2c)",
        "do",
        "    if [ -f $$f ]",
        "    then",
        "        if [ re2c = `basename $$f` -a -x $$f ]",
        "        then",
        "            break",
        "        fi",
        "    fi",
        "done",
        "$$f --conditions --tags -o $(@D)/lexer.c $(location lexer.re)",
    ]),
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "starlark.c",
        "lexer.c",
        "nodes.c",
        "parser.c",
        "serialize.c",
        "token_debug.c",
        "test_lex.c",
        "test_parse.c",
    ],
    outs = [
        "starlark.h",
        "lexer.h",
        "nodes.h",
        "parser.h",
        "serialize.h",
        "token_debug.h",
        "test_lex.h",
        "test_parse.h"
    ],
    cmd = "\n".join([
        "SRC1=$(location starlark.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) \\",
        "    $(location starlark.c) \\",
        "    $(location lexer.c) \\",
        "    $(location nodes.c) \\",
        "    $(location parser.c) \\",
        "    $(location serialize.c) \\",
        "    $(location token_debug.c) \\",
        "    $(location test_lex.c) \\",
        "    $(location test_parse.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)

################################################################
## testing lexer, parser

cc_binary(
    name  = "test_lex",
    srcs  = [
        "test_lex.c",
        "test_lex.h",
        "starlark.c",
        "starlark.h",
        "token_debug.c",
        "token_debug.h",
        "nodes.c",
        "nodes.h",
        "lexer.c",
        "lexer.h",
        "serialize.c",
        "serialize.h",
        "@uthash//:include",
    ],
    copts = [
        "-std=c11",
        "-pedantic-errors",

        "-I", "src",

        "-I", "$(GENDIR)/src",
        # "-I", "$(GENDIR)/external/tools_obazl/src",

        "-I", "vendored/logc",
        # "-I", "external/obazl/vendored/logc",
        # "-I", "external/tools_obazl/vendored/logc",

        "-I", "external/uthash/include",
    ],
    deps = [
        ":lexer",
        ":parser",
        "//vendored/logc"
    ],
    # linkopts = select({
    #     "//bzl/host:linux": [],
    #     "//bzl/host:macos": ["-framework", "CoreServices"],
    # }),
    linkstatic = 1
)

##########
cc_binary(
    name  = "test_parse",
    srcs  = [
        "test_parse.c",
        "test_parse.h",
        "starlark.c",
        "starlark.h",
        "token_debug.c",
        "token_debug.h",
        "nodes.c",
        "nodes.h",
        "serialize.c",
        "serialize.h",
        "@uthash//:include",
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    copts = [
        "-std=c11",
        "-pedantic-errors",

        "-I", "src",
        "-I", "$(GENDIR)/src",
        "-I", "$(GENDIR)/external/tools_obazl/src",

        "-I", "vendored/logc",
        "-I", "external/obazl/vendored/logc",
        "-I", "external/tools_obazl/vendored/logc",

        "-I", "external/uthash/include",
    ],
    deps = [
        ":lexer",
        ":parser",
        "//vendored/logc"
    ],
    linkstatic = 1
)
