load("@rules_cc//cc:defs.bzl", "cc_library")

# exports_files(["serialize.h"])

##########
cc_library(
    name  = "starlark",
    # alwayslink = True,
    linkstatic = 1,
    srcs  = [
        "parse.c",
        "parse.h",          # local impl hdr
        "serialize.c",
        "serialize.h",
        "@uthash//:include",
        "//vendored/logc:log.h"
   ],
    hdrs = [
        "starlark.h",           # api hdr
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",
        "-g", "-O0",
        "-I", ".",
        "-I", "$(GENDIR)/src",
        "-I", "$(GENDIR)/external/src",

        "-I", "external/uthash/include",
        "-I", "vendored/logc",
        "-I", "external/vendored/logc",
    ],
    deps = [
        ":lexis",
        ":parser",
        "//vendored/logc"
    ],
    visibility = ["//visibility:public"]
)

##########
cc_library(
    name  = "parser",
    visibility = ["//visibility:public"],
    srcs  = [
        "syntaxis.c",
        "syntaxis.h",
        "nodes.c",
        "nodes.h",
        "@uthash//:include"
    ],
    copts = [
        "-std=c11",
        # "-g",
        "-I", "$(GENDIR)/src",
        "-I", "external/uthash/include",
        "-I", "vendored/logc",
        "-I", "external/obazl/vendored/logc",
        "-I", "external/tools_obazl/vendored/logc",
        "-U", "NDEBUG"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc"
    ]
)

########
genrule(
    name = "gen_parser",
    srcs = [
        "syntaxis.y",
        "//vendored/lemon:lempar.c"
    ],
    tools = ["//vendored/lemon"],
    outs  = [
        "syntaxis.c",
        "syntaxis.out"
    ],
    cmd   = "\n".join([
        "$(location //vendored/lemon) -m \\",
        "$(location syntaxis.y) \\",
        "-T$(location //vendored/lemon:lempar.c) \\",
        "-DTEST \\",
        "-d$(RULEDIR)",
    ]),
    visibility = ["//visibility:public"]
)

###########
cc_library(
    name  = "lexis",
    visibility = ["//visibility:public"],
    srcs  = [
        "lexis.c",
        "lexis.h",
        "nodes.c",
        "nodes.h",
        "debug.c",
        "debug.h",
        "@uthash//:include",
    ],
    copts = [
        "-std=c11",
        "-I", ".",
        "-I", "src",
        "-I", "$(GENDIR)/src",

        "-I", "external/uthash/include",
        "-I", "vendored/logc",
        "-I", "external/obazl/vendored/logc",
        "-I", "external/tools_obazl/vendored/logc",
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc"
    ]
)

########
genrule(
    name = "gen_lexis",
    srcs = [
        "lexis.re",
        # "test.re",
    ],
    tools = ["//external/re2c"],
    outs  = [
        "lexis.c"
    ],
    cmd   = "\n".join([
        "for f in $(locations //external/re2c)",
        "do",
        "    if [ -f $$f ]",
        "    then",
        "        if [ re2c = `basename $$f` -a -x $$f ]",
        "        then",
        "            break",
        "        fi",
        "    fi",
        "done",
        "$$f --conditions --tags -o $(@D)/lexis.c $(location lexis.re)",
    ]),
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "parse.c",
        "lexis.c",
        "nodes.c",
        "syntaxis.c",
        "serialize.c",
        "debug.c",
        "test_lex.c",
        "test_parse.c",
    ],
    outs = [
        "parse.h",
        "lexis.h",
        "nodes.h",
        "syntaxis.h",
        "serialize.h",
        "debug.h",
        "test_lex.h",
        "test_parse.h"
    ],
    cmd = "\n".join([
        "SRC1=$(location parse.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) \\",
        "    $(location parse.c) \\",
        "    $(location lexis.c) \\",
        "    $(location nodes.c) \\",
        "    $(location syntaxis.c) \\",
        "    $(location serialize.c) \\",
        "    $(location debug.c) \\",
        "    $(location test_lex.c) \\",
        "    $(location test_parse.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)

genrule(
    name = "mkhdrs-export",
    srcs = [
        "parse.c",
        "lexis.c",
        "nodes.c",
        "syntaxis.c",
        "serialize.c",
        "debug.c",
        "test_lex.c",
        "test_parse.c",
    ],
    outs = [
        "starlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location parse.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) -H \\",
        "    $(location parse.c) \\",
        "    $(location lexis.c) \\",
        "    $(location nodes.c) \\",
        "    $(location syntaxis.c) \\",
        "    $(location serialize.c) \\",
        "    $(location debug.c) \\",
        "    $(location test_lex.c) \\",
        "    $(location test_parse.c) \\",
        "    > $@"
        # "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)

################################################################
## testing lexis, parser

cc_binary(
    name  = "test_lex",
    srcs  = [
        "test_lex.c",
        "test_lex.h",
        "parse.c",
        "parse.h",
        "debug.c",
        "debug.h",
        "nodes.c",
        "nodes.h",
        "lexis.c",
        "lexis.h",
        "serialize.c",
        "serialize.h",
        "@uthash//:include",
    ],
    copts = [
        "-std=c11",
        "-pedantic-errors",

        "-I", "src",

        "-I", "$(GENDIR)/src",
        # "-I", "$(GENDIR)/external/tools_obazl/src",

        "-I", "vendored/logc",
        # "-I", "external/obazl/vendored/logc",
        # "-I", "external/tools_obazl/vendored/logc",

        "-I", "external/uthash/include",
    ],
    deps = [
        ":lexis",
        ":parser",
        "//vendored/logc"
    ],
    # linkopts = select({
    #     "//bzl/host:linux": [],
    #     "//bzl/host:macos": ["-framework", "CoreServices"],
    # }),
    linkstatic = 1
)

##########
cc_binary(
    name  = "test_parse",
    srcs  = [
        "test_parse.c",
        "test_parse.h",
        "parse.c",
        "parse.h",
        "debug.c",
        "debug.h",
        "nodes.c",
        "nodes.h",
        "serialize.c",
        "serialize.h",
        "@uthash//:include",
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    copts = [
        "-std=c11",
        "-pedantic-errors",

        "-I", "src",
        "-I", "$(GENDIR)/src",
        "-I", "$(GENDIR)/external/tools_obazl/src",

        "-I", "vendored/logc",
        "-I", "external/obazl/vendored/logc",
        "-I", "external/tools_obazl/vendored/logc",

        "-I", "external/uthash/include",
    ],
    deps = [
        ":lexis",
        ":parser",
        "//vendored/logc"
    ],
    linkstatic = 1
)
