load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name  = "edit",
    linkstatic = 1,
    srcs  = [
        "edit.c",
        "edit.h",
    ],
    data = [
        # "//test/data/cc:BUILD.test",
        # "//test/data/walk:BUILD.bazel",
        # "//test/data/walk:BUILD.targets3",
        "//sunlark/scm:edit.scm"
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/bindings/scheme",
        "-I$(GENDIR)/external/moonlark/binding/scheme",

        "-I", "$(GENDIR)/sealark",
        "-I", "$(GENDIR)external/moonlark/sealark",

        "-I$(GENDIR)/sunlark",
        "-I$(GENDIR)/external/moonlark/sunlark",

        "-I", "vendored/logc",
        "-I", "external/moonlark/vendored/logc",

        "-I", "vendored/s7",
        "-I", "external/moonlark/vendored/s7",

        "-I", "vendored/uthash",
        "-I", "external/moonlark/vendored/uthash",
    ],
    deps = [
        "//bindings/scheme:sunlark",
        "//bazel",
        "//sealark",
        "//vendored/logc",
        "//vendored/uthash",
        "//vendored/s7"
    ],
)

##########
cc_binary(
    name  = "repl",
    srcs  = ["repl.c"],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",
        "-I$(GENDIR)/bindings/scheme",
        "-Ivendored/linenoise",
        "-Ivendored/s7",
        "-Ivendored/uthash"
    ],
    data = [
        "//sunlark/scm:edit.scm"
    ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": [ "-Wl,-E", "-ldl"],
        "//conditions:default": {}
    }) + [
        "-lm",
    ],
    deps = [
        "//bindings/scheme:sunlark",
        "//vendored/linenoise",
        "//vendored/s7",
        "//vendored/uthash"
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "edit.c",
        # "//bindings/scheme:libsunlark.c",
        "//bazel:bazel_config.c",
        # "//sealark:mkhdrs-export",
        # "//bindings/scheme:mkhdrs-export",
    ],
    outs = [
        "edit.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location edit.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        # "    $(location //bindings/scheme:libsunlark.c) \\",
        # "    $(location //bindings/scheme:mkhdrs-export) \\",
        "    $(location //bazel:bazel_config.c) \\",
        # "    $(location //sealark:mkhdrs-export) \\",
        "    $(location edit.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
