load("@rules_cc//cc:defs.bzl", "cc_binary")

exports_files(["lmoonlark.c"])

##########
cc_library(
    name  = "moonlark",
    # linkstatic = 1,
    # alwayslink = 1,
    # linkshared = 1,
    srcs  = [
        "lmoonlark.c",
        "lmoonlark.h",
    ],
    # data = [
    # ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
        }) + [
        "-pedantic-errors",

        "-I", "$(GENDIR)/bindings/lua", # moonlark.h
        "-I", "$(GENDIR)/external/moonlark/bindings/lua", # moonlark.h

        "-Isrc/lib/moonlark", # libmoonlark.h
        "-Iexternal/moonlark/src/lib/moonlark", # libmoonlark.h

        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)/external/moonlark/src/lib/starlark",

        "-I", "$(GENDIR)/src/lib/moonlark",
        "-I", "$(GENDIR)/external/moonlark/src/lib/moonlark",

        "-I", "vendored/uthash",
        "-I", "external/moonlark/vendored/uthash",

        "-I", "vendored/logc",
        "-I", "external/moonlark/vendored/logc",

        "-I", "vendored/lua-5.4.3/src",
        "-I", "external/moonlark/vendored/lua-5.4.3/src",
    ],
    deps = [
        "//src/lib/lbazel",
        "//src/lib/starlark",
        "//src/lib/moonlark",
        "//vendored/lua-5.4.3/src:lua",
        "//vendored/logc",
        "//vendored/uthash",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    visibility = ["//visibility:public"],
    srcs = [
        "lmoonlark.c",
        "//src/lib/lbazel:lbazel.c",
    ],
    outs = [
        "lmoonlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location lmoonlark.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location //src/lib/lbazel:lbazel.c) \\",
        "    $(location lmoonlark.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"]
)
